--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,37 +26,41 @@ h1 {
 }
 
 h2 {
-  @apply text-5xl font-bold tracking-normal text-balance text-primary sm:text-6xl;
+  @apply text-5xl font-bold tracking-normal text-balance text-primary sm:text-5xl;
 }
 
 h3 {
-  @apply text-4xl font-semibold tracking-normal text-balance text-primary sm:text-5xl;
+  @apply text-4xl font-semibold tracking-normal text-balance text-primary sm:text-4xl;
 }
 
 h4 {
-  @apply text-3xl font-semibold tracking-normal text-balance text-dark sm:text-4xl;
+  @apply text-3xl font-semibold tracking-normal text-balance  sm:text-3xl;
 }
 
 h5 {
-  @apply text-2xl font-semibold tracking-normal text-balance text-dark sm:text-3xl;
+  @apply text-2xl font-semibold tracking-normal text-balance  sm:text-2xl;
 }
 
 h6 {
-  @apply text-xl font-semibold text-balance text-gray-950 sm:text-2xl tracking-widest;
-}
-
-h7 {
-  @apply text-lg font-semibold tracking-tight text-balance text-dark sm:text-xl;
+  @apply text-xl font-semibold text-balance sm:text-xl tracking-wide;
 }
 
 p {
-  @apply mt-6 text-lg/8 text-pretty text-dark sm:text-xl/8;
+  @apply mt-3 text-base text-pretty sm:text-lg;
+}
+
+small {
+  @apply text-sm;
 }
 
 ul {
-  @apply mt-10 grid grid-cols-1 gap-x-8 gap-y-3 text-base/7 text-dark sm:grid-cols-2;
+  @apply mt-10 grid grid-cols-1 gap-x-8 gap-y-3 text-base sm:grid-cols-2;
 }
 
 li {
   @apply relative pl-4;
+}
+
+body {
+  @apply text-dark;
 }
