--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import {
   CTASection,
   StatsSection,
   TransportBadge,
-  InfoCard,
-  MobilityMeasures
+  MobilityMeasures,
+  Timeline,
 } from "../components/react";
 import heroImage from "../assets/img/sum-hero.png";
 import mcdaImage from "../assets/img/sum-mcda.png";
@@ -27,44 +27,60 @@ import impactImage from "../assets/img/sum-measure-kpi-impact.png";
       href: "#",
     }}
   />
-  <StatsSection
-    titleHighlight="SEAMLESS"
-    title="Shared Urban Mobility"
-    subtitle="The SUM Open Data Platform collects and delivers data and analytical tools to monitor, evaluate, and optimize the seamless integration of new shared mobility services with public transport across European Living Labs."
-    stats={[
-      { id: 1, name: "Living labs", value: "9" },
-      {
-        id: 2,
-        name: "Measures implemented for New Shared Modes integration",
-        value: "16",
-      },
-      {
-        id: 3,
-        name: "Different Shared Mobility integrated in Living Labs",
-        value: "10",
-      },
-      {
-        id: 4,
-        name: "Average increase for New Share Modes use (since 2023)",
-        value: "+5%",
-      },
-    ]}
-  />
-  <CTASection title="Measures for Shared Urban Mobility" description="" order="center">
-    <div class="'text-center">
-      <div class="flex justify-center flex-wrap gap-1 md:gap-4 mb-8">
-        <TransportBadge type="bus" size="lg" color="secondary" />
-        <TransportBadge type="bike" size="lg" color="primary-light" />
-        <TransportBadge type="car" size="lg" color="accent" />
-        <TransportBadge type="e-car" size="lg" color="light" />
-        <TransportBadge type="e-bus" size="lg" color="secondary" />
-        <TransportBadge type="metro" size="lg" color="primary-light" />
-        <TransportBadge type="scooter" size="lg" color="accent" />
-      </div>
-
-      <MobilityMeasures />
+  <div class="text-center">
+    <div class="flex justify-center flex-wrap gap-1 md:gap-4 my-6">
+      <TransportBadge type="bus" size="lg" color="secondary" />
+      <TransportBadge type="bike" size="lg" color="primary-light" />
+      <TransportBadge type="car" size="lg" color="accent" />
+      <TransportBadge type="e-car" size="lg" color="light" />
+      <TransportBadge type="e-bus" size="lg" color="secondary" />
+      <TransportBadge type="metro" size="lg" color="primary-light" />
+      <TransportBadge type="scooter" size="lg" color="accent" />
     </div>
-  </CTASection>
+
+    <StatsSection
+      titleHighlight="SEAMLESS"
+      title="Shared Urban Mobility"
+      subtitle="The SUM Open Data Platform collects and delivers data and analytical tools to monitor, evaluate, and optimize the seamless integration of new shared mobility services with public transport across European Living Labs."
+      stats={[
+        { id: 1, name: "Living labs", value: "9" },
+        {
+          id: 2,
+          name: "Measures implemented for New Shared Modes integration",
+          value: "16",
+        },
+        {
+          id: 3,
+          name: "Different Shared Mobility integrated in Living Labs",
+          value: "10",
+        },
+        {
+          id: 4,
+          name: "Average increase for New Share Modes use (since 2023)",
+          value: "+5%",
+        },
+      ]}
+    />
+    <CTASection
+      title="Monitoring measures around New Shared Mobility"
+      description="From pre-implementation surveys to real-world impact analysis, here's how data flows through the SUM project."
+      order="center"
+      linkText="Add your city"
+      linkHref="#"
+    >
+      <Timeline />
+    </CTASection>
+
+    <CTASection
+      title="Measures for Seamless Shared Urban Mobility"
+      description="Measures are policy actions, infrastructure changes, service rollouts, or regulatory shifts implemented by cities to impact how people move through urban spaces. Each measure falls under one of two strategic categories: "
+      order="center"
+      linkText="Know more about the measures"
+      linkHref="#"
+    >
+      <MobilityMeasures hideDescription={true} />
+    </CTASection>
+  </div>
 
   <CTASection
     title="Push and pull measures impact assessment tool"
