--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,27 +22,27 @@
 }
 
 h1 {
-  @apply text-6xl font-bold tracking-normal text-balance text-primary sm:text-7xl;
+  @apply text-5xl font-bold tracking-normal text-balance text-primary sm:text-7xl;
 }
 
 h2 {
-  @apply text-5xl font-bold tracking-normal text-balance text-primary sm:text-5xl;
+  @apply text-4xl font-bold tracking-normal text-balance text-primary sm:text-5xl;
 }
 
 h3 {
-  @apply text-4xl font-semibold tracking-normal text-balance text-primary sm:text-4xl;
+  @apply text-3xl font-semibold tracking-normal text-balance text-primary sm:text-4xl;
 }
 
 h4 {
-  @apply text-3xl font-semibold tracking-normal text-balance  sm:text-3xl;
+  @apply text-2xl font-semibold tracking-normal text-balance  sm:text-3xl;
 }
 
 h5 {
-  @apply text-2xl font-semibold tracking-normal text-balance  sm:text-2xl;
+  @apply text-xl font-semibold tracking-normal text-balance  sm:text-2xl;
 }
 
 h6 {
-  @apply text-xl font-semibold text-balance sm:text-xl tracking-wide;
+  @apply text-lg font-semibold text-balance sm:text-xl tracking-wide;
 }
 
 p {
