feat: signup and lab info

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import impactImage from "../assets/img/sum-measure-kpi-impact.png";
     subtitle="A first-of-its-kind, Pan-European Open Data Platform tracking the impact of push and pull measures on New Shared Mobility and Public Transport across 9+ Living Labs."
     primary={{
       text: "Add your city",
-      href: "#",
+      href: "/lab/signup",
     }}
     secondary={{
       text: "Explore the Living Labs",
