--- a/src/pages/lab/edit.astro
+++ b/src/pages/lab/edit.astro
@@ -7,7 +7,7 @@ import LivingLabForm from "../../components/react/form/LivingLabForm";
   <div class="px-6 py-12">
     <section class="max-w-3xl mx-auto">
       <h2>Provide context about the Living Lab and city</h2>
-      <p class="text-accent italic mb-6">
+      <p class="text-warning italic mb-6">
         Use the form to provide a name and approximate geolocation and activity
         metrics for visualization purposes.
       </p>
