--- a/src/pages/lab/signup.astro
+++ b/src/pages/lab/signup.astro
@@ -7,7 +7,7 @@ import SignupForm from "../../components/react/form/SignupForm";
   <div class="px-6 py-12">
     <section class="max-w-3xl mx-auto">
       <h2>Provide your contact and login information</h2>
-      <p class="text-accent italic mb-6">
+      <p class="text-warning italic mb-6">
         Please use official partner emails for security and moderation purposes.
       </p>
       <SignupForm client:load />
