--- a/src/pages/lab/index.astro
+++ b/src/pages/lab/index.astro
@@ -1,12 +1,128 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import { CTACard, LabDashboardTabs } from "../../components/react";
-import { Timeline } from "../../components/react";
+import ApiClient from "../../lib/api-client/ApiClient.ts";
 
-const livingLab = {
-  name: "Geneva",
-  user: "JohnDoe",
+const api = new ApiClient();
+const user = {
+  id: "john_doe",
+  name: "John Doe",
+  email: "john.doe@example.com",
 };
+const kpis = await api.getKPIs();
+const livingLab = await api.getLivingLab("lab_munich");
+const counters = {
+  kpisBefore: {
+    total: livingLab.kpis?.length || 0,
+    global:
+      livingLab.kpis?.filter((kpi) => kpi.value_before && kpi.type === "GLOBAL")
+        .length || 0,
+    local:
+      livingLab.kpis?.filter((kpi) => kpi.value_before && kpi.type === "LOCAL")
+        .length || 0,
+  },
+  kpisAfter: {
+    total: livingLab.kpis?.length || 0,
+    global:
+      livingLab.kpis?.filter((kpi) => kpi.value_after && kpi.type === "GLOBAL")
+        .length || 0,
+    local:
+      livingLab.kpis?.filter((kpi) => kpi.value_after && kpi.type === "LOCAL")
+        .length || 0,
+  },
+  measures: {
+    total: livingLab.measures?.length || 0,
+    push:
+      livingLab.measures?.filter((measure) => measure.type === "PUSH").length ||
+      0,
+    pull:
+      livingLab.measures?.filter((measure) => measure.type === "PULL").length ||
+      0,
+  },
+  transport: {
+    total: livingLab.transport_modes?.length || 0,
+    nsm:
+      livingLab.transport_modes?.filter(
+        (mode) => mode.type.toLowerCase() === "nsm"
+      ).length || 0,
+    other:
+      livingLab.transport_modes?.filter(
+        (mode) => mode.type.toLowerCase() !== "nsm"
+      ).length || 0,
+  },
+};
+const countersKpiBefore = counters.kpisBefore;
+const countersKpiAfter = counters.kpisAfter;
+const countersMeasures = counters.measures;
+const transportCounter = counters.transport;
+
+const progressItems = [
+  {
+    title: "KPIs before",
+    subtitle: `${countersKpiBefore?.total || 0} entries`,
+    info1: `${countersKpiBefore?.local || 0} local`,
+    info2: `${countersKpiBefore?.global || 0} global`,
+    className: "border-info bg-info/60",
+  },
+  {
+    title: "KPIs after",
+    subtitle: `${countersKpiAfter?.total || 0} entries`,
+    info1: `${countersKpiAfter?.local || 0} local`,
+    info2: `${countersKpiAfter?.global || 0} global`,
+    className: "border-info/60 bg-info/20",
+  },
+  {
+    title: "Measures",
+    subtitle: `${countersMeasures?.total || 0} entries`,
+    info1: `${countersMeasures?.push || 0} push`,
+    info2: `${countersMeasures?.pull || 0} pull`,
+    className: "border-dark/60 bg-light/20",
+  },
+  {
+    title: "Transport",
+    subtitle: `${transportCounter?.total || 0} modes`,
+    info1: `${transportCounter?.nsm || 0} NSM`,
+    info2: `${transportCounter?.other || 0} other`,
+    className: "border-dark bg-light/50",
+  },
+];
+
+const alertItem = {
+  title: "Alers",
+  variant: "warning",
+  actionText: "Learn more",
+  children: "alerts",
+};
+
+const alerts = [];
+if (countersKpiAfter.total === 0) {
+  alerts.push({
+    title: "Missing KPIs (after)",
+    variant: "danger",
+    actionText: "Add KPIs",
+    children:
+      "No KPIs have been submitted for the 'after' period. Please add them to proceed.",
+  });
+}
+if (countersMeasures.total === 0) {
+  alerts.push({
+    title: "Missing Measures (after)",
+    variant: "danger",
+    actionText: "Add Measures",
+    children:
+      "No measures have been submitted for the 'after' period. Please add them to proceed.",
+  });
+}
+//add alerts for missing transport modes
+if (transportCounter.total === 0) {
+  alerts.push({
+    title: "Missing Transport Modes (after)",
+    variant: "danger",
+    actionText: "Add Transport Modes",
+    children:
+      "No transport modes have been submitted for the 'after' period. Please add them to proceed.",
+  });
+}
 
 const steps = [
   {
@@ -14,7 +130,9 @@ const steps = [
     title: "1. Modal split (before)",
     description:
       "Enter the baseline modal share (cars, bikes, PT, walking, etc.) before any measures were implemented.",
-    completed: true,
+    completed:
+      kpis?.length === countersKpiBefore?.total && countersKpiBefore?.total > 0,
+    inProgress: kpis?.length > 0 && kpis?.length < countersKpiBefore?.total,
     cta: "Edit modal split",
     href: "/lab/modal-split",
   },
@@ -23,8 +141,10 @@ const steps = [
     title: "2. KPIs (before)",
     description:
       "Complete the KPI survey or upload data collected before the implementation period.",
-    completed: false,
-    inProgress: true,
+    completed:
+      kpis?.length === countersKpiBefore?.total && countersKpiBefore?.total > 0,
+    inProgress:
+      countersKpiBefore?.total > 0 && countersKpiBefore?.total < kpis?.length,
     cta: "Edit KPIs",
     href: "/lab/kpis-before",
   },
@@ -33,7 +153,7 @@ const steps = [
     title: "3. Measures",
     description:
       "Select or add the push and pull measures your city is implementing.",
-    completed: true,
+    completed: countersMeasures?.total > 0,
     cta: "Edit measures",
     href: "/lab/measures",
   },
@@ -52,7 +172,10 @@ const steps = [
     title: "5. KPIs (after)",
     description:
       "This will open once your implementation period is complete. You will need to re-submit KPIs for comparison.",
-    completed: false,
+    completed:
+      kpis?.length === countersKpiAfter?.total && countersKpiAfter?.total > 0,
+    inProgress:
+      countersKpiAfter?.total > 0 && countersKpiAfter?.total < kpis?.length,
     locked: true,
     cta: "Edit KPIs",
     href: "/lab/kpis-after",
@@ -66,7 +189,7 @@ const steps = [
       class="max-w-7xl mx-auto px-4 py-12 sm:px-6 lg:px-8 flex flex-col gap-10 lg:gap-18"
     >
       <div class="flex flex-col gap-4">
-        <h2>Welcome {livingLab.user}</h2>
+        <h2>Welcome {user.name}</h2>
         <h3>
           You are managing data for the <strong class="text-success"
             >Living Lab {livingLab.name}</strong
@@ -78,26 +201,10 @@ const steps = [
         </p>
       </div>
 
-      <LabDashboardTabs client:load />
+      <LabDashboardTabs client:load progress={progressItems} alerts={alerts} />
 
       <div class="grid gap-10 grid-cols-1">
         <h3 class="text-center">Manage living lab data</h3>
-        <div class="hidden lg:block">
-          <Timeline
-            steps={steps.map((step, idx) => ({
-              stepLabel: `Step.${idx + 1}`,
-              title: step.title,
-              description: step.description,
-              footnote: step.completed
-                ? "✅ Completed"
-                : step.inProgress
-                  ? "⏳ In Progress"
-                  : step.locked
-                    ? "🔒 Locked"
-                    : "Not Started",
-            }))}
-          />
-        </div>
         <div class="grid gap-1 lg:gap-10 sm:grid-cols-2 lg:grid-cols-2">
           {
             steps.map((step, index) => (
