--- a/src/pages/lab/kpis.astro
+++ b/src/pages/lab/kpis.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import { LivingLabKPIs } from "../../components/react";
+import { LivingLabKPIs, InfoAlert } from "../../components/react";
 import ApiClient from "../../lib/api-client/ApiClient";
 
 //TODO : get mocked data for transport modes and modal split (KPI 15)
@@ -8,21 +8,31 @@ import ApiClient from "../../lib/api-client/ApiClient";
 const api = new ApiClient();
 
 const labId = 1;
-const kpis = await api.getKPIs();
-const livingLabKpis = await api.getLivingLabWithKpisAndMeasures(labId);
+const kpis = await api.getKPIs({});
+const livingLabKpis = await api.getLivingLabAndData(labId);
 ---
 
 <Layout>
-  <div class="max-w-5xl mx-auto px-4 py-8">
+  <div class="max-w-5xl mx-auto px-4 py-8 flex flex-col gap-8">
     <h2>Share your Key Performance Indicators - KPI</h2>
-    <p class="text-sm text-gray-600 mb-6">
-      Find the relevant KPIs for seamless urban mobility.
-    </p>
+    <p>Find the relevant KPIs for seamless urban mobility.</p>
+
+    <InfoAlert
+      title="How to calculate KPIs ?"
+      icon="question"
+      variant="success"
+      actionText="Access documentation"
+    >
+      <small
+        >Access the survey template and documents to support your KPI
+        calculations.</small
+      >
+    </InfoAlert>
 
     <LivingLabKPIs
       kpis={kpis}
       livingLabId={labId}
-      livingLabKpis={livingLabKpis?.kpi_results || []}
+      kpiResults={livingLabKpis?.kpi_results || []}
       client:load
     />
   </div>
