--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,11 +31,11 @@ import impactImage from "../assets/img/sum-measure-kpi-impact.png";
     <div class="flex justify-center flex-wrap gap-1 md:gap-4 my-6">
       <TransportBadge type="bus" size="lg" color="secondary" />
       <TransportBadge type="bike" size="lg" color="primary-light" />
-      <TransportBadge type="car" size="lg" color="accent" />
+      <TransportBadge type="car" size="lg" color="warning" />
       <TransportBadge type="e-car" size="lg" color="light" />
       <TransportBadge type="e-bus" size="lg" color="secondary" />
       <TransportBadge type="metro" size="lg" color="primary-light" />
-      <TransportBadge type="scooter" size="lg" color="accent" />
+      <TransportBadge type="scooter" size="lg" color="warning" />
     </div>
 
     <StatsSection
