--- a/src/pages/lab-dashboard/geneva.astro
+++ b/src/pages/lab-dashboard/geneva.astro
@@ -14,7 +14,7 @@ const livingLabKpis = await api.getLivingLabAndData(labId);
 ---
 
 <Layout>
-  <div class="max-w-5xl mx-auto px-4 py-8 flex flex-col gap-8">
+  <div class="lg:mx-20 mx-auto px-4 py-8 flex flex-col gap-8">
     <h2><strong>{livingLabKpis?.name}</strong>Living lab data dashboard</h2>
     <h3>Key Performance Indicators (KPIs)</h3>
     <p>Explore the KPIs related to the living lab.</p>
