--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const labs = livingLabsData.map((lab) => ({
 }));
 ---
 
-<Layout>
+<Layout role="visitor">
   <CTAHero
     image={heroImage}
     title="SUM Open Data Platform"
