--- a/src/pages/lab/edit.astro
+++ b/src/pages/lab/edit.astro
@@ -3,7 +3,7 @@ import Layout from "../../layouts/Layout.astro";
 import LivingLabForm from "../../components/react/form/LivingLabForm";
 ---
 
-<Layout>
+<Layout role="editor">
   <div class="px-6 py-12">
     <section class="max-w-3xl mx-auto">
       <h2>Provide context about the Living Lab and city</h2>
