--- a/src/pages/lab/index.astro
+++ b/src/pages/lab/index.astro
@@ -167,7 +167,7 @@ const steps = [
 ];
 ---
 
-<Layout>
+<Layout role="editor">
   <div class="">
     <section
       class="max-w-7xl mx-auto px-4 py-12 sm:px-6 lg:px-8 flex flex-col gap-10 lg:gap-18"
