--- a/src/pages/lab/signup.astro
+++ b/src/pages/lab/signup.astro
@@ -3,7 +3,7 @@ import Layout from "../../layouts/Layout.astro";
 import SignupForm from "../../components/react/form/SignupForm";
 ---
 
-<Layout>
+<Layout role="editor">
   <div class="px-6 py-12">
     <section class="max-w-3xl mx-auto">
       <h2>Provide your contact and login information</h2>
