--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,9 +48,9 @@ const labsItems = labs.map((lab) => ({
   <body>
     {
       role === "visitor" && (
-        <div class="flex flex-col">
-          <SiteNavBar livingLabs={labsItems} client:load /> <slot />
-        </div>
+        <SiteNavBar livingLabs={labsItems} client:load>
+          <slot />
+        </SiteNavBar>
       )
     }
     {
