fix: remove mocked after values

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,13 +50,12 @@ const labs = livingLabsData.map((lab) => ({
   />
   <div class="text-center">
     <div class="flex justify-center flex-wrap gap-1 md:gap-4 my-6">
-      <TransportBadge type="bus" size="lg" color="secondary" />
-      <TransportBadge type="bike" size="lg" color="primary-light" />
-      <TransportBadge type="car" size="lg" color="warning" />
-      <TransportBadge type="e-car" size="lg" color="light" />
-      <TransportBadge type="e-bus" size="lg" color="secondary" />
-      <TransportBadge type="metro" size="lg" color="primary-light" />
-      <TransportBadge type="scooter" size="lg" color="warning" />
+      <TransportBadge type="bus" size="lg" color="warning" />
+      <TransportBadge type="bike" size="lg" color="secondary" />
+      <TransportBadge type="metro" size="lg" color="info" />
+      <TransportBadge type="car-sharing" size="lg" color="secondary" />
+      <TransportBadge type="e-bus" size="lg" color="light" />
+      <TransportBadge type="scooter" size="lg" color="secondary" />
     </div>
 
     <StatsSection
