--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const labs = livingLabsData.map((lab) => ({
     subtitle="A first-of-its-kind, Pan-European Open Data Platform tracking the impact of push and pull measures on New Shared Mobility and Public Transport across 9+ Living Labs."
     primary={{
       text: "Add your city",
-      href: getUrl("/lab/signup"),
+      href: getUrl("/lab-admin/signup"),
     }}
     secondary={{
       text: "Explore the Living Labs",
