--- a/src/pages/lab-admin/measures.astro
+++ b/src/pages/lab-admin/measures.astro
@@ -17,7 +17,7 @@ const livinglab = await api.getLivingLabAndData(labId);
 ---
 
 <Layout role="editor">
-  <div class="max-w-5xl mx-auto px-4 py-8 flex flex-col gap-8">
+  <div class="mx-auto px-4 py-8 flex flex-col gap-8">
     <h2>What measures is your living lab implementing ?</h2>
     <p>Review the measures for Seamless Urban Mobility and New Shared Modes</p>
 
