--- a/src/pages/lab-admin/login.astro
+++ b/src/pages/lab-admin/login.astro
@@ -3,7 +3,7 @@ import Layout from "../../layouts/Layout.astro";
 import LoginForm from "../../components/react/form/LoginForm";
 ---
 
-<Layout role="editor">
+<Layout role="visitor">
   <div class="px-6 py-12">
     <section class="max-w-3xl mx-auto">
       <h2>Sign in to your account</h2>
